--- a/statisksite/index.html
+++ b/statisksite/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <link rel="icon" type="image/svg+xml" href="img/r.svg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Koulen&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Categories</title>
   </head>
 
   <body>
     <header>
-      <a href="index.html">
-        <img src="img/logo.svg" alt="Logo" />
-      </a>
       <input type="checkbox" id="burger-toggle" />
       <label for="burger-toggle" class="burger-menu"> ☰ </label>
       <nav>
-        <ul class="menu">
+        <ul>
           <li><a href="index.html">Categories</a></li>
           <li><a href="#">Brands</a></li>
           <li><a href="#">Seasons</a></li>
@@ -26,8 +27,9 @@
     </header>
 
     <main>
+      <h1>FASHION<span style="color: #d84727">Я</span>US</h1>
       <h2>Categories</h2>
-      <section class="categorylist">
+      <section class="category_list_container">
         <a href="productlist.html">Accessories</a>
         <a href="productlist.html">Apparel</a>
         <a href="productlist.html">Footwear</a>
