--- a/statisksite/productlist.html
+++ b/statisksite/productlist.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <link rel="icon" type="image/svg+xml" href="img/r.svg" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Koulen&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Productlist</title>
   </head>
@@ -27,54 +31,343 @@
 
     <main>
       <h2>Nike</h2>
+      <section class="product_list_container">
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
 
-      <article class="product">
-        <img
-          src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-          alt="Sahara Team India Fanwear Round Neck Jersey"
-        />
-        <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-        <p>Tshirts | Nike</p>
-        <p>DKK 1595,-</p>
-        <a href="product.html">Read More</a>
-      </article>
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
 
-      <article class="product">
-        <img
-          src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-          alt="Blue T20"
-        />
-        <h3>Blue T20 Indian Cricket Jersey</h3>
-        <p>Tshirts | Nike</p>
-        <p>Prev. DKK 1595,-</p>
-        <p>Now DKK 1560,-</p>
-        <p>-34%</p>
-        <a href="product.html">Read More</a>
-      </article>
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
 
-      <article class="product">
-        <img
-          src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-          alt="Blue T20 Indian Cricket Jersey"
-        />
-        <h3>Blue T20 Indian Cricket Jersey</h3>
-        <p>Tshirts | Nike</p>
-        <p>DKK 1595,-</p>
-        <a href="product.html">Read More</a>
-      </article>
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
 
-      <article class="product">
-        <img
-          src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-          alt="Blue T20 Indian"
-        />
-        <h3>Blue T20 Indian Cricket Jersey</h3>
-        <p>Tshirts | Nike</p>
-        <p>Prev.DKK 1595,-</p>
-        <p>Now DKK 1560,-</p>
-        <p>-34%</p>
-        <a href="product.html">Read More</a>
-      </article>
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+            alt="Sahara Team India Fanwear Round Neck Jersey"
+          />
+          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev. DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+            alt="Blue T20 Indian Cricket Jersey"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>DKK 1595,-</p>
+          <a href="product.html">Read More</a>
+        </article>
+
+        <article class="product">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+            alt="Blue T20 Indian"
+          />
+          <h3>Blue T20 Indian Cricket Jersey</h3>
+          <p>Tshirts | Nike</p>
+          <p>Prev.DKK 1595,-</p>
+          <p>Now DKK 1560,-</p>
+          <p>-34%</p>
+          <a href="product.html">Read More</a>
+        </article>
+      </section>
     </main>
 
     <footer></footer>
