--- a/statisk_site/index.html
+++ b/statisk_site/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-      <h1>FASHION<span style="color: #d84727">Я</span>US</h1>
+      <h1>FASHION<span>Я</span>US</h1>
       <h2>Categories</h2>
       <section class="category_list_container">
         <a href="productlist.html">Accessories</a>
