--- a/statisk_site/product.html
+++ b/statisk_site/product.html
@@ -29,7 +29,30 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section class="info">
+        <div>
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Blue T20"
+          />
+        </div>
+        <div class="more_info">
+          <h3 class="brand">Nike</h3>
+          <h2 class="product_name">Blue T20 Indian Cricket Jersey</h2>
+          <p class="inventory_number">Inventory number 1163</p>
+          <h3 class="price">DKK 1595,-</h3>
+          <h3 class="sale_price">DKK 1560,-</h3>
+          <p class="color">Color: Blue</p>
+          <div class="size">
+            <p>Size</p>
+            <p>XXS</p>
+            <p>XS</p>
+          </div>
+          <p>Add to cart</p>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
