--- a/statisk_site/productlist.html
+++ b/statisk_site/productlist.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Koulen&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Koulen&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Productlist</title>
   </head>
@@ -18,8 +22,8 @@
       <a href="index.html">
         <img src="img/logo.svg" alt="Logo" />
       </a>
-      <input type="checkbox" id="burger-toggle" />
-      <label for="burger-toggle" class="burger-menu"> ☰ </label>
+      <!-- <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger-menu"> ☰ </label> -->
       <nav>
         <ul class="menu">
           <li><a href="index.html">Categories</a></li>
@@ -32,18 +36,79 @@
     <main>
       <h2>Nike</h2>
       <section class="product_list_container">
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <a href="product.html" class="product-link">
+          <article class="product">
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt="Sahara Team India Fanwear Round Neck Jersey"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
 
-        <article class="product">
+        <a href="product.html" class="product-link">
+          <article class="product_onsale">
+            <span class="discount-label">-34%</span>
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+              alt="Blue T20"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price-container">
+                <p class="old-price">DKK 1595,-</p>
+                <p class="new-price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
+
+        <a href="product.html" class="product-link">
+          <article class="product_soldout">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+                alt="Blue T20 Indian Cricket Jersey"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
+
+        <a href="product.html" class="product-link">
+          <article class="product_onsale_soldout">
+            <span class="discount-label">-34%</span>
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+                alt="Blue T20 Indian"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price-container">
+                <p class="old-price">DKK 1595,-</p>
+                <p class="new-price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
+
+        <p>-34%</p>
+
+        <article class="product_onsale">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
             alt="Blue T20"
@@ -56,7 +121,7 @@
           <a href="product.html">Read More</a>
         </article>
 
-        <article class="product">
+        <article class="product_soldout">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
             alt="Blue T20 Indian Cricket Jersey"
@@ -67,7 +132,7 @@
           <a href="product.html">Read More</a>
         </article>
 
-        <article class="product">
+        <article class="product_onsale_soldout">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
             alt="Blue T20 Indian"
@@ -80,18 +145,7 @@
           <a href="product.html">Read More</a>
         </article>
 
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
+        <article class="product_onsale">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
             alt="Blue T20"
@@ -104,7 +158,7 @@
           <a href="product.html">Read More</a>
         </article>
 
-        <article class="product">
+        <article class="product_soldout">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
             alt="Blue T20 Indian Cricket Jersey"
@@ -115,247 +169,7 @@
           <a href="product.html">Read More</a>
         </article>
 
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="Sahara Team India Fanwear Round Neck Jersey"
-          />
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
-
-        <article class="product">
+        <article class="product_onsale_soldout">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
             alt="Blue T20 Indian"
