--- a/statisk_site/index.html
+++ b/statisk_site/index.html
@@ -15,8 +15,8 @@
 
   <body>
     <header>
-      <input type="checkbox" id="burger-toggle" />
-      <label for="burger-toggle" class="burger-menu"> ☰ </label>
+      <!-- <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger-menu"> ☰ </label> -->
       <nav>
         <ul>
           <li><a href="index.html">Categories</a></li>
