--- a/statisk_site/product.html
+++ b/statisk_site/product.html
@@ -18,8 +18,8 @@
       <a href="index.html">
         <img src="img/logo.svg" alt="Logo" />
       </a>
-      <input type="checkbox" id="burger-toggle" />
-      <label for="burger-toggle" class="burger-menu"> ☰ </label>
+      <!-- <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger-menu"> ☰ </label> -->
       <nav>
         <ul class="menu">
           <li><a href="index.html">Categories</a></li>
