laver påproduct_list

--- a/statisk_site/index.html
+++ b/statisk_site/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="index-header">
       <!-- <input type="checkbox" id="burger-toggle" />
       <label for="burger-toggle" class="burger-menu"> ☰ </label> -->
       <nav>
