--- a/statisk_site/productlist.html
+++ b/statisk_site/productlist.html
@@ -34,9 +34,10 @@
     </header>
 
     <main>
-      <h2>Nike</h2>
+      <h2>Categorie</h2>
       <section class="product_list_container">
-        <a href="product.html" class="product-link">
+        <!-- /* Generelt for produkter */ -->
+        <a href="product.html" class="product_link">
           <article class="product">
             <img
               src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
@@ -50,7 +51,8 @@
           </article>
         </a>
 
-        <a href="product.html" class="product-link">
+        <!-- /* Produkter på udsalg */ -->
+        <a href="product.html" class="product_link">
           <article class="product_onsale">
             <span class="discount-label">-34%</span>
             <img
@@ -60,15 +62,16 @@
             <div class="product_info">
               <p>Nike</p>
               <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price-container">
-                <p class="old-price">DKK 1595,-</p>
-                <p class="new-price">DKK 1560,-</p>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
               </div>
             </div>
           </article>
         </a>
 
-        <a href="product.html" class="product-link">
+        <!-- /* Udsolgte produkter */ -->
+        <a href="product.html" class="product_link">
           <article class="product_soldout">
             <div class="image_container">
               <img
@@ -85,7 +88,8 @@
           </article>
         </a>
 
-        <a href="product.html" class="product-link">
+        <!-- /* Produkter på udsalg og udsolgt */ -->
+        <a href="product.html" class="product_link">
           <article class="product_onsale_soldout">
             <span class="discount-label">-34%</span>
             <div class="image_container">
@@ -98,89 +102,238 @@
             <div class="product_info">
               <p>Nike</p>
               <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price-container">
-                <p class="old-price">DKK 1595,-</p>
-                <p class="new-price">DKK 1560,-</p>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
               </div>
             </div>
           </article>
         </a>
 
-        <p>-34%</p>
+        <!-- ***************************************************** -->
+        <!-- /* Generelt for produkter */ -->
+        <a href="product.html" class="product_link">
+          <article class="product">
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt="Sahara Team India Fanwear Round Neck Jersey"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
 
-        <article class="product_onsale">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <!-- /* Produkter på udsalg */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_onsale">
+            <span class="discount-label">-34%</span>
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+              alt="Blue T20"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
 
-        <article class="product_soldout">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <!-- /* Udsolgte produkter */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_soldout">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+                alt="Blue T20 Indian Cricket Jersey"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
 
-        <article class="product_onsale_soldout">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <!-- /* Produkter på udsalg og udsolgt */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_onsale_soldout">
+            <span class="discount-label">-34%</span>
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+                alt="Blue T20 Indian"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
 
-        <article class="product_onsale">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-            alt="Blue T20"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev. DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <!-- ***************************************************** -->
+        <!-- /* Generelt for produkter */ -->
+        <a href="product.html" class="product_link">
+          <article class="product">
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt="Sahara Team India Fanwear Round Neck Jersey"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
 
-        <article class="product_soldout">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-            alt="Blue T20 Indian Cricket Jersey"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>DKK 1595,-</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <!-- /* Produkter på udsalg */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_onsale">
+            <span class="discount-label">-34%</span>
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+              alt="Blue T20"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
 
-        <article class="product_onsale_soldout">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-            alt="Blue T20 Indian"
-          />
-          <h3>Blue T20 Indian Cricket Jersey</h3>
-          <p>Tshirts | Nike</p>
-          <p>Prev.DKK 1595,-</p>
-          <p>Now DKK 1560,-</p>
-          <p>-34%</p>
-          <a href="product.html">Read More</a>
-        </article>
+        <!-- /* Udsolgte produkter */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_soldout">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+                alt="Blue T20 Indian Cricket Jersey"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
+
+        <!-- /* Produkter på udsalg og udsolgt */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_onsale_soldout">
+            <span class="discount-label">-34%</span>
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+                alt="Blue T20 Indian"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
+
+        <!-- ***************************************************** -->
+        <!-- /* Generelt for produkter */ -->
+        <a href="product.html" class="product_link">
+          <article class="product">
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt="Sahara Team India Fanwear Round Neck Jersey"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
+
+        <!-- /* Produkter på udsalg */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_onsale">
+            <span class="discount-label">-34%</span>
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+              alt="Blue T20"
+            />
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
+
+        <!-- /* Udsolgte produkter */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_soldout">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
+                alt="Blue T20 Indian Cricket Jersey"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <p>DKK 1595,-</p>
+            </div>
+          </article>
+        </a>
+
+        <!-- /* Produkter på udsalg og udsolgt */ -->
+        <a href="product.html" class="product_link">
+          <article class="product_onsale_soldout">
+            <span class="discount-label">-34%</span>
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
+                alt="Blue T20 Indian"
+              />
+              <span class="soldout_label">Sold Out</span>
+            </div>
+            <div class="product_info">
+              <p>Nike</p>
+              <h3>Blue T20 Indian Cricket Jersey</h3>
+              <div class="price_container">
+                <p class="old_price">DKK 1595,-</p>
+                <p class="new_price">DKK 1560,-</p>
+              </div>
+            </div>
+          </article>
+        </a>
       </section>
     </main>
 
