sender statisk færdig

--- a/statisk_site/index.html
+++ b/statisk_site/index.html
@@ -15,13 +15,13 @@
 
   <body>
     <header class="index-header">
-      <!-- <input type="checkbox" id="burger-toggle" />
-      <label for="burger-toggle" class="burger-menu"> ☰ </label> -->
+      <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger-menu"> ☰ </label>
       <nav>
         <ul>
           <li><a href="index.html">Categories</a></li>
-          <li><a href="#">Brands</a></li>
-          <li><a href="#">Seasons</a></li>
+          <li><a href="index.html">Brands</a></li>
+          <li><a href="index.html">Seasons</a></li>
         </ul>
       </nav>
     </header>
