--- a/statisk_site/product.html
+++ b/statisk_site/product.html
@@ -20,16 +20,16 @@
 
   <body>
     <header>
-      <a href="index.html">
-        <img src="img/logo.svg" alt="Logo" />
+      <a href="index.html" class="logo">
+        <h1>FASHION<span>Я</span>US</h1>
       </a>
-      <!-- <input type="checkbox" id="burger-toggle" />
-      <label for="burger-toggle" class="burger-menu"> ☰ </label> -->
+      <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger-menu"> ☰ </label>
       <nav>
         <ul class="menu">
           <li><a href="index.html">Categories</a></li>
-          <li><a href="#"> Brands</a></li>
-          <li><a href="#">Seasons</a></li>
+          <li><a href="index.html">Brands</a></li>
+          <li><a href="index.html">Seasons</a></li>
         </ul>
       </nav>
     </header>
