--- a/statisk_site/product.html
+++ b/statisk_site/product.html
@@ -44,7 +44,7 @@
         />
       </figure>
 
-      <div class="singel_product_info">
+      <div class="single_product_info">
         <h3 class="brand">Nike</h3>
         <h2 class="product_name">
           Sahara Team India Fanwear Round Neck Jersey
@@ -61,13 +61,11 @@
         <div class="size_container">
           <p>Size</p>
           <div class="size_options">
-            <span class="size">XXS</span>
             <span class="size">XS</span>
             <span class="size">S</span>
             <span class="size">M</span>
             <span class="size">L</span>
             <span class="size">XL</span>
-            <span class="size">XXL</span>
           </div>
         </div>
 
