--- a/statisk_site/productlist.html
+++ b/statisk_site/productlist.html
@@ -35,45 +35,50 @@
     </header>
 
     <main>
-      <h2>Categorie</h2>
+      <h2>Categories</h2>
       <section class="product_list_container">
-        <!-- /* Generelt for produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product">
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-              alt="Sahara Team India Fanwear Round Neck Jersey"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-              <p>DKK 1595,-</p>
+        <!-- ************************************ -->
+        <!-- Generisk produkt -->
+        <article class="product">
+          <a href="product.html" class="product_link">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+                alt="Sahara Team India Fanwear Round Neck Jersey"
+              />
             </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p class="price">DKK 1595,-</p>
+          </div>
+        </article>
 
-        <!-- /* Produkter på udsalg */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale">
-            <span class="discount-label">-34%</span>
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-              alt="Blue T20"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
+        <!-- Produkt på udsalg -->
+        <article class="product onsale">
+          <a href="product.html" class="product_link">
+            <div class="image_container">
+              <span class="discount-label">-34%</span>
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+                alt="Blue T20"
+              />
             </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <div class="price_container">
+              <p class="old_price">DKK 1595,-</p>
+              <p class="new_price">DKK 1560,-</p>
+            </div>
+          </div>
+        </article>
 
-        <!-- /* Udsolgte produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_soldout">
+        <!-- Udsolgt produkt -->
+        <article class="product soldout">
+          <a href="product.html" class="product_link">
             <div class="image_container">
               <img
                 src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
@@ -81,74 +86,77 @@
               />
               <span class="soldout_label">Sold Out</span>
             </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <p>DKK 1595,-</p>
-            </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <p class="price">DKK 1595,-</p>
+          </div>
+        </article>
 
-        <!-- /* Produkter på udsalg og udsolgt */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale_soldout">
-            <span class="discount-label">-34%</span>
+        <!-- Produkt på udsalg og udsolgt -->
+        <article class="product onsale soldout">
+          <a href="product.html" class="product_link">
             <div class="image_container">
+              <span class="discount-label">-34%</span>
               <img
                 src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
                 alt="Blue T20 Indian"
               />
               <span class="soldout_label">Sold Out</span>
             </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <div class="price_container">
+              <p class="old_price">DKK 1595,-</p>
+              <p class="new_price">DKK 1560,-</p>
             </div>
-          </article>
-        </a>
-
-        <!-- ***************************************************** -->
-        <!-- /* Generelt for produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product">
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-              alt="Sahara Team India Fanwear Round Neck Jersey"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-              <p>DKK 1595,-</p>
+          </div>
+        </article>
+        <!-- ************************************ -->
+        <!-- Generisk produkt -->
+        <article class="product">
+          <a href="product.html" class="product_link">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+                alt="Sahara Team India Fanwear Round Neck Jersey"
+              />
             </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p class="price">DKK 1595,-</p>
+          </div>
+        </article>
 
-        <!-- /* Produkter på udsalg */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale">
-            <span class="discount-label">-34%</span>
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-              alt="Blue T20"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
+        <!-- Produkt på udsalg -->
+        <article class="product onsale">
+          <a href="product.html" class="product_link">
+            <div class="image_container">
+              <span class="discount-label">-34%</span>
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+                alt="Blue T20"
+              />
             </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <div class="price_container">
+              <p class="old_price">DKK 1595,-</p>
+              <p class="new_price">DKK 1560,-</p>
+            </div>
+          </div>
+        </article>
 
-        <!-- /* Udsolgte produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_soldout">
+        <!-- Udsolgt produkt -->
+        <article class="product soldout">
+          <a href="product.html" class="product_link">
             <div class="image_container">
               <img
                 src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
@@ -156,74 +164,78 @@
               />
               <span class="soldout_label">Sold Out</span>
             </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <p>DKK 1595,-</p>
-            </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <p class="price">DKK 1595,-</p>
+          </div>
+        </article>
 
-        <!-- /* Produkter på udsalg og udsolgt */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale_soldout">
-            <span class="discount-label">-34%</span>
+        <!-- Produkt på udsalg og udsolgt -->
+        <article class="product onsale soldout">
+          <a href="product.html" class="product_link">
             <div class="image_container">
+              <span class="discount-label">-34%</span>
               <img
                 src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
                 alt="Blue T20 Indian"
               />
               <span class="soldout_label">Sold Out</span>
             </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <div class="price_container">
+              <p class="old_price">DKK 1595,-</p>
+              <p class="new_price">DKK 1560,-</p>
             </div>
-          </article>
-        </a>
+          </div>
+        </article>
 
-        <!-- ***************************************************** -->
-        <!-- /* Generelt for produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product">
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-              alt="Sahara Team India Fanwear Round Neck Jersey"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-              <p>DKK 1595,-</p>
+        <!-- ************************************ -->
+        <!-- Generisk produkt -->
+        <article class="product">
+          <a href="product.html" class="product_link">
+            <div class="image_container">
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+                alt="Sahara Team India Fanwear Round Neck Jersey"
+              />
             </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p class="price">DKK 1595,-</p>
+          </div>
+        </article>
 
-        <!-- /* Produkter på udsalg */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale">
-            <span class="discount-label">-34%</span>
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-              alt="Blue T20"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
+        <!-- Produkt på udsalg -->
+        <article class="product onsale">
+          <a href="product.html" class="product_link">
+            <div class="image_container">
+              <span class="discount-label">-34%</span>
+              <img
+                src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+                alt="Blue T20"
+              />
             </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <div class="price_container">
+              <p class="old_price">DKK 1595,-</p>
+              <p class="new_price">DKK 1560,-</p>
+            </div>
+          </div>
+        </article>
 
-        <!-- /* Udsolgte produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_soldout">
+        <!-- Udsolgt produkt -->
+        <article class="product soldout">
+          <a href="product.html" class="product_link">
             <div class="image_container">
               <img
                 src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
@@ -231,110 +243,35 @@
               />
               <span class="soldout_label">Sold Out</span>
             </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <p>DKK 1595,-</p>
-            </div>
-          </article>
-        </a>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <p class="price">DKK 1595,-</p>
+          </div>
+        </article>
 
-        <!-- /* Produkter på udsalg og udsolgt */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale_soldout">
-            <span class="discount-label">-34%</span>
+        <!-- Produkt på udsalg og udsolgt -->
+        <article class="product onsale soldout">
+          <a href="product.html" class="product_link">
             <div class="image_container">
+              <span class="discount-label">-34%</span>
               <img
                 src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
                 alt="Blue T20 Indian"
               />
               <span class="soldout_label">Sold Out</span>
             </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
+          </a>
+          <div class="product_info">
+            <p class="brand">Nike</p>
+            <h3>Blue T20 Indian Cricket Jersey</h3>
+            <div class="price_container">
+              <p class="old_price">DKK 1595,-</p>
+              <p class="new_price">DKK 1560,-</p>
             </div>
-          </article>
-        </a>
-
-        <!-- ***************************************************** -->
-        <!-- /* Generelt for produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product">
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-              alt="Sahara Team India Fanwear Round Neck Jersey"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-              <p>DKK 1595,-</p>
-            </div>
-          </article>
-        </a>
-
-        <!-- /* Produkter på udsalg */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale">
-            <span class="discount-label">-34%</span>
-            <img
-              src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
-              alt="Blue T20"
-            />
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
-            </div>
-          </article>
-        </a>
-
-        <!-- /* Udsolgte produkter */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_soldout">
-            <div class="image_container">
-              <img
-                src="https://kea-alt-del.dk/t7/images/webp/640/1165.webp"
-                alt="Blue T20 Indian Cricket Jersey"
-              />
-              <span class="soldout_label">Sold Out</span>
-            </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <p>DKK 1595,-</p>
-            </div>
-          </article>
-        </a>
-
-        <!-- /* Produkter på udsalg og udsolgt */ -->
-        <a href="product.html" class="product_link">
-          <article class="product_onsale_soldout">
-            <span class="discount-label">-34%</span>
-            <div class="image_container">
-              <img
-                src="https://kea-alt-del.dk/t7/images/webp/640/1525.webp"
-                alt="Blue T20 Indian"
-              />
-              <span class="soldout_label">Sold Out</span>
-            </div>
-            <div class="product_info">
-              <p>Nike</p>
-              <h3>Blue T20 Indian Cricket Jersey</h3>
-              <div class="price_container">
-                <p class="old_price">DKK 1595,-</p>
-                <p class="new_price">DKK 1560,-</p>
-              </div>
-            </div>
-          </article>
-        </a>
+          </div>
+        </article>
       </section>
     </main>
 
