--- a/statisk_site/index.html
+++ b/statisk_site/index.html
@@ -31,11 +31,11 @@
       <h2>Categories</h2>
       <section class="category_list_container">
         <a href="productlist.html">Accessories</a>
-        <a href="productlist.html">Apparel</a>
-        <a href="productlist.html">Footwear</a>
+        <a href="productlist.html">Clothing</a>
+        <a href="productlist.html">Shoes</a>
         <a href="productlist.html">Free Items</a>
         <a href="productlist.html">Personal Care</a>
-        <a href="productlist.html">Sporting Goods</a>
+        <a href="productlist.html">Sport</a>
       </section>
     </main>
 
