--- a/statisk_site/product.html
+++ b/statisk_site/product.html
@@ -35,13 +35,14 @@
     </header>
 
     <main class="productContainer">
-      <figure class="image_container">
+      <!-- <figure class="image_container">
         <span class="discount-label">-34%</span>
         <img
           src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
           alt="Sahara Team India Fanwear Round Neck Jersey"
           class="productImage"
         />
+        <span class="soldout_label">Sold Out</span>
       </figure>
 
       <div class="single_product_info">
@@ -70,7 +71,7 @@
         </div>
 
         <button class="add-to-cart">Add to cart</button>
-      </div>
+      </div> -->
     </main>
 
     <footer></footer>
